# marketElectricity

./: .gitignore  CMakeLists.txt  app.rc  m_utils.c  m_utils.h  main.c  readme.md  styles.h  ui.c  ui.h  web.c  web.h  winReleaseTool.bat
gui/: CMakeLists.txt  readme.md  styles.h  ui.c  ui.h
lib/: readme.md
logger/: CMakeLists.txt  logger.c  logger.h  readme.md
m_cache/: CMakeLists.txt  m_cache.c  m_cache.h  readme.md
m_utils/: CMakeLists.txt  m_utils.c  m_utils.h  readme.md
viewModel/: CMakeLists.txt  readme.md  viewModel.h
web/: CMakeLists.txt  readme.md  web.c  web.h
